crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__record_ctor_disabled_in_head.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "Shape::Empty { }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Path(
        Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "Shape",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: "Empty",
                },
            ],
        },
    ),
}
