crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__record_ctor_empty.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "Empty {}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: RecordCtor {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "Empty",
                },
            ],
        },
        fields: [],
    },
}
