crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__var_camel.snap
---
source: crates/alder-parse/src/expression/path.rs
description: fetchPrefs
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Var(
        "fetchPrefs",
    ),
}
