crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__var_simple.snap
---
source: crates/alder-parse/src/expression/path.rs
description: x
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Var(
        "x",
    ),
}
