crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__var_underscore_inside.snap
---
source: crates/alder-parse/src/expression/path.rs
description: snake_case_1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Var(
        "snake_case_1",
    ),
}
